test/valid/object-chaining-long.js
({ method: function() { return this; } }).method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method().method();
