test/invalid/func-as-row.js
function f(g) { return g.length; }
f(function(x) { return x;});

